fixes gap overflow

--- a/src/components/objectDetails/ObjectDetails.css
+++ b/src/components/objectDetails/ObjectDetails.css
@@ -2,7 +2,7 @@
 .ObjectDetails {
   display: grid;
   grid-template-rows: repeat(6, 1fr);
-  grid-template-columns: repeat(5, 20%);
+  grid-template-columns: repeat(5, 1fr);
   grid-gap: 1px;
 }
 
